<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_bg1"
    tools:context=".addSubject">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="364dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="ADD SUBJECTS"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cardView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:alpha="0.9"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btimport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10">

        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <Spinner
                android:id="@+id/program"
                android:layout_width="303dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="9dp"
                android:prompt="@string/course_prompt"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/year"
                android:layout_width="303dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="9dp"
                android:prompt="@string/year_prompt"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/section"
                android:layout_width="303dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="9dp"/>

            <Spinner
                android:id="@+id/prof"
                android:layout_width="303dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="9dp"
                android:prompt="@string/select_professor"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/term"
                android:layout_width="303dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="9dp"
                android:prompt="@string/term_prompt" />

            <EditText
                android:id="@+id/subjectName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="9dp"
                android:ems="10"
                android:hint="Course Description"
                android:inputType="textPersonName"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="9dp">

                <EditText
                    android:id="@+id/code"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Course Code"
                    android:inputType="textPersonName"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="299dp" />

                <EditText
                    android:id="@+id/unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Unit"
                    android:inputType="number" />
            </LinearLayout>

            <Spinner
                android:id="@+id/days"
                android:layout_width="303dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="9dp"
                android:prompt="@string/days_prompt"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="9dp">

                <Button
                    android:id="@+id/startTimePicker"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:hint="Start Time"
                    android:onClick="showStartTimePicker" />

                <Button
                    android:id="@+id/endTimePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="End Time"
                    android:onClick="showEndTimePicker" />
            </LinearLayout>

            <EditText
                android:id="@+id/room"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="9dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Room Number: "
                android:inputType="textPersonName" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:text="Enroll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.858" />

    <Button
        android:id="@+id/btimport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="154dp"
        android:layout_marginEnd="143dp"
        android:backgroundTint="@color/green"
        android:text="Import"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.86" />

    <Button
        android:id="@+id/show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:text="SHOW"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.852"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.858" />

</androidx.constraintlayout.widget.ConstraintLayout>